Updated a few tests, added a test and mocked some other tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@504 89a0fb20-889e-aefa-90f6-7c296b20d5cf